--- a/front/src/app/components/products/new-product/new-product.component.html
+++ b/front/src/app/components/products/new-product/new-product.component.html
@@ -1,16 +1,19 @@
-<div class="card">
-    <div class="card-header">Prideti nauja preke</div>
+<app-error [isError]="isError" [text]="errorText"></app-error>
+<div class="card mt-3">
+    <div class="card-header">Pridėti naują prekę</div>
     <div class="card-body">
-        <form #f="ngForm" (ngSubmit)="productSubmit(f)">
+        <form (ngSubmit)="productSubmit(f)" #f="ngForm">
             <div class="mb-3">
                 <label for="" class="form-label">Pavadinimas</label>
-                <input type="text" class="form-control" name="name" value="" ngModel>
+                <input type="text" class="form-control" name="name" value="" ngModel minlength="2" maxlength="64" required #inputName="ngModel">
             </div>
+            <div *ngIf="!inputName.valid && inputName.touched">Įvestas blogas pavadinimas</div>
             <div class="mb-3">
                 <label for="" class="form-label">Kaina</label>
                 <input type="text" class="form-control" name="price" value="" ngModel>
             </div>
-            <button class="btn btn-success" type="submit">Prideti</button>
+            <button class="btn btn-success" type="submit">Pridėti</button>
         </form>
+
     </div>
 </div>
