--- a/front/src/app/components/products/update-product/update-product.component.html
+++ b/front/src/app/components/products/update-product/update-product.component.html
@@ -1,3 +1,5 @@
+<app-error [isError]="isError" [text]="errorText"></app-error>
+
 <div class="card mt-3">
     <div class="card-header">Atnaujinti prekę</div>
     <div class="card-body">
@@ -8,7 +10,7 @@
             </div>
             <div class="mb-3">
                 <label for="" class="form-label">Kaina</label>
-                <input type="text" class="form-control" name="price" value="" ngModel [(ngModel)]="price">
+                <input type="number" class="form-control" name="price" value="" ngModel [(ngModel)]="price">
             </div>
             <button class="btn btn-success" type="submit">Atnaujinti</button>
         </form>
