--- a/front/src/app/components/navigation/navigation.component.html
+++ b/front/src/app/components/navigation/navigation.component.html
@@ -16,8 +16,11 @@
                 <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="#">Užsakymai</a>
                 </li>
-
             </ul>
+        </div>
+        <div class="d-flex">
+            <a class="btn btn-success mx-3" routerLink="/auth/signin">Registruotis</a>
+            <a class="btn btn-success" routerLink="/auth/login">Prisijungti</a>
         </div>
     </div>
 </nav>
