--- a/front/src/app/components/auth/signin/signin.component.html
+++ b/front/src/app/components/auth/signin/signin.component.html
@@ -1,29 +1,28 @@
 <div class="row mt-3">
     <div class="col-md-6 offset-md-3">
         <div class="card">
-            <div class="card-header">
-                Registruotis i sistema
-            </div>
+            <div class="card-header">Registruotis į sistemą</div>
             <div class="card-body">
                 <form (ngSubmit)="onRegister(f)" #f="ngForm">
                     <div class="mb-3">
-                        <label class="form-label">El. pastas</label>
-                        <input name="email" type="text" class="form-control" placeholder="El. pasto adresas" ngModel required maxlength="64" email>
+                        <label class="form-label">El. pašto adresas</label>
+                        <input type="text" name="email" class="form-control" ngModel required maxlength="64" email>
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Vartotojo vardas</label>
-                        <input name="name" type="text" class="form-control" placeholder="Jusu vardas" ngModel minlength="2" maxlength="64" pattern="[a-zA-Z]*">
+                        <input type="text" name="name" class="form-control" ngModel minlength="2" maxlength="64" pattern="[a-zA-Z]*">
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Slaptazodis</label>
-                        <input name="password" type="password" class="form-control" placeholder="Slaptazodis" ngModel>
+                        <label class="form-label">Slaptažodis</label>
+                        <input type="password" name="password" class="form-control" ngModel>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Pakartokite slaptazodi</label>
-                        <input name="" id="" type="password" class="form-control" placeholder="Pakrotokite slaptazodi">
+                        <label class="form-label">Pakartokite slaptažodį</label>
+                        <input type="password" name="" class="form-control">
                     </div>
                     <button class="btn btn-success">Registruotis</button>
                 </form>
+
             </div>
         </div>
     </div>
