--- a/front/src/app/components/helper/error/error.component.html
+++ b/front/src/app/components/helper/error/error.component.html
@@ -1,1 +1,5 @@
-<div *ngIf="isError" class="alert alert-danger mt-3 mb-3">{{ text }}</div>
+<div *ngIf="isError" class="alert alert-danger mt-3 mb-3 alert-dismissible">
+    {{ text }}
+
+    <button class="btn-close" (click)="onColoseError()"></button>
+</div>
