--- a/front/src/app/components/navigation/navigation.component.html
+++ b/front/src/app/components/navigation/navigation.component.html
@@ -8,19 +8,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link " aria-current="page" routerLink="/products/list">Prekių sąrašas</a>
+                    <a class="nav-link " *ngIf="authService.canViewData()" aria-current="page" routerLink="/products/list">Prekių sąrašas</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="authService.canEdit()">
                     <a class="nav-link " aria-current="page" routerLink="/products/new">Pridėti naują prekę</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="#">Užsakymai</a>
-                </li>
+
             </ul>
         </div>
         <div class="d-flex">
-            <a class="btn btn-success mx-3" routerLink="/auth/signin">Registruotis</a>
-            <a class="btn btn-success" routerLink="/auth/login">Prisijungti</a>
+            <a class="btn btn-info mx-3" routerLink="/auth/signin" *ngIf="!isLoggedin">
+                Registruotis
+
+            </a>
+            <a class="btn btn-success" routerLink="/auth/login" *ngIf="!isLoggedin">
+                Prisijungti
+
+            </a>
+            <button class="btn btn-primary" (click)="logoutClick()" *ngIf="isLoggedin">
+                Atsijungti
+
+            </button>
         </div>
     </div>
 </nav>
