--- a/front/src/app/components/navigation/navigation.component.html
+++ b/front/src/app/components/navigation/navigation.component.html
@@ -13,6 +13,9 @@
                 <li class="nav-item" *ngIf="authService.canEdit()">
                     <a class="nav-link " aria-current="page" routerLink="/products/new">Pridėti naują prekę</a>
                 </li>
+                <li class="nav-item" *ngIf="authService.canEditUsers()">
+                    <a class="nav-link" routerLink="users/list">Vartotojų sąrašas</a>
+                </li>
 
             </ul>
         </div>
