--- a/front/src/app/components/navigation/navigation.component.html
+++ b/front/src/app/components/navigation/navigation.component.html
@@ -28,6 +28,9 @@
                 Prisijungti
 
             </a>
+            <a class="btn btn-success mx-3" routerLink="/profile" *ngIf="isLoggedin">
+                Profilis
+            </a>
             <button class="btn btn-primary" (click)="logoutClick()" *ngIf="isLoggedin">
                 Atsijungti
 
