--- a/front/src/app/components/users/list-users/list-users.component.html
+++ b/front/src/app/components/users/list-users/list-users.component.html
@@ -5,6 +5,8 @@
             <thead>
                 <tr>
                     <th>Nr</th>
+                    <th></th>
+                    <th></th>
                     <th>El. pašto adresas</th>
                     <th>Vardas</th>
                     <th>Tipas</th>
@@ -14,6 +16,8 @@
             <tbody>
                 <tr *ngFor="let user of users; let i=index;">
                     <td>{{ i+1 }}</td>
+                    <td><img [src]="user.img" alt="" style="max-width: 100px;"></td>
+                    <td><a [href]="user.img" style="max-width: 100px;" class="btn btn-success">Parsiųsti </a></td>
                     <td>{{ user.email }}</td>
                     <td>{{ user.name }}</td>
                     <td>{{ user.getTypeName() }}</td>
