--- a/front/src/app/components/navigation/navigation.component.html
+++ b/front/src/app/components/navigation/navigation.component.html
@@ -13,6 +13,14 @@
                 <li class="nav-item" *ngIf="authService.canEdit()">
                     <a class="nav-link " aria-current="page" routerLink="/products/new">Pridėti naują prekę</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link " *ngIf="authService.canViewData()" aria-current="page" routerLink="/orders/list">Užsakimų sąrašas</a>
+                </li>
+                <li class="nav-item" *ngIf="authService.canEdit()">
+                    <a class="nav-link " aria-current="page" routerLink="/orders/new">Pridėti naują užsakymą</a>
+                </li>
+
                 <li class="nav-item" *ngIf="authService.canEditUsers()">
                     <a class="nav-link" routerLink="users/list">Vartotojų sąrašas</a>
                 </li>
