--- a/front/src/app/components/products/list-products/filter-products/filter-products.component.html
+++ b/front/src/app/components/products/list-products/filter-products/filter-products.component.html
@@ -1,1 +1,8 @@
-<p>Produktu sarasas</p>
+<div class="card">
+    <div class="card-body">
+        <div class="mb-3">
+            <input type="text" class="form-control" [(ngModel)]="filter" placeholder="Pavadinimas">
+        </div>
+        <button class="btn btn-info" (click)="onFilter()">Filtruoti</button>
+    </div>
+</div>
